--- a/TurbineComplete.ipynb
+++ b/TurbineComplete.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fdd0f7f0-680e-464c-afb8-017416a4a430",
    "metadata": {},
@@ -59,7 +60,6 @@
     "    def __init__(self, master=None):\n",
     "        super().__init__(master)\n",
     "        self.master = master\n",
-    "        #self.create_widgets()\n",
     "        self.master.title(\"TurbineGenerator UNB-FURNAS\")\n",
     "        self.master.configure(bg=\"#ffffff\")   \n",
     "\n",
@@ -76,8 +76,7 @@
     "        header.image = photo  # Keep a reference to the PhotoImage to prevent it from being garbage collected\n",
     "        header.grid(row=0, column=0, columnspan=3, rowspan=5)\n",
     "        \n",
-    "        # pontos = np.loadtxt('NACA653618.dat')\n",
-    "        # curva = np.loadtxt('shapeTUCUNARE.dat')\n",
+    "\n",
     "        self.file1_path = tk.StringVar(value='NACA653618.dat')\n",
     "        self.file2_path = tk.StringVar(value='shapeTUCUNARE.dat')\n",
     "        self.num_blades = tk.IntVar(value=3)\n",
@@ -87,8 +86,7 @@
     "        self.foundationRadius = tk.DoubleVar(value=5)  \n",
     "        self.output = tk.StringVar(value=\"turbine\")\n",
     "        \n",
-    "        #self.towerRadius= tk.IntVar(value=1)\n",
-    "        #self.towerHeight= tk.IntVar(value=15)\n",
+    "        #Creates the entries \n",
     "         \n",
     "       \n",
     "        tk.Label(self.master, text=\"Airfoil:\",font=(\"Helvetica\", 12, \"bold\"), bg=\"#ffffff\").grid(row=0, column=3)\n",
@@ -112,14 +110,7 @@
     "        tk.Entry(self.master, textvariable=self.foundationHeight, width=10).grid(row=5, column=4)\n",
     "        \n",
     "        tk.Label(self.master, text=\"Foundation radius [m]:\",font=(\"Helvetica\", 12, \"bold\"),bg=\"#ffffff\").grid(row=6, column=3)\n",
-    "        tk.Entry(self.master, textvariable=self.foundationRadius, width=10).grid(row=6, column=4)    \n",
-    "        #tk.Label(self.master, text=\"Tower radius:\",font=(\"Helvetica\", 12, \"bold\"),bg=\"#ffffff\").grid(row=3, column=3)\n",
-    "        #tk.Entry(self.master, textvariable=self.towerRadius, width=10).grid(row=3, column=4)\n",
-    "        \n",
-    "        #tk.Label(self.master, text=\"Tower height:\",font=(\"Helvetica\", 12, \"bold\"),bg=\"#ffffff\").grid(row=4, column=3)\n",
-    "        #tk.Entry(self.master, textvariable=self.towerHeight, width=10).grid(row=4, column=4)\n",
-    "        \n",
-    "               \n",
+    "        tk.Entry(self.master, textvariable=self.foundationRadius, width=10).grid(row=6, column=4)                 \n",
     "        \n",
     "        tk.Label(self.master, text=\"Output File\",font=(\"Helvetica\", 12, \"bold\"),bg=\"#ffffff\").grid(row=7, column=3)\n",
     "        tk.Entry(self.master, textvariable=self.output).grid(row=7, column=4)\n",
@@ -145,10 +136,7 @@
     "\n",
     "        pontos = np.loadtxt(file1_path)\n",
     "        curva = np.loadtxt(file2_path)\n",
-    "\n",
-    "        # pontos = np.loadtxt('NACA653618.dat')\n",
-    "        # curva = np.loadtxt('shapeTUCUNARE.dat')\n",
-    "        \n",
+    "     \n",
     "        \n",
     "        NumberOfBlades= self.num_blades.get()\n",
     "        towerHeight= self.towerHeight.get()\n",
