--- a/TurbineComplete.ipynb
+++ b/TurbineComplete.ipynb
@@ -133,15 +133,16 @@
     "        file2_path = self.file2_path.get()\n",
     "        \n",
     "\n",
-    "\n",
+    "        # Inputs for the rotor Design: airfoil, blade shape and number of blades\n",
     "        pontos = np.loadtxt(file1_path)\n",
-    "        curva = np.loadtxt(file2_path)\n",
-    "     \n",
-    "        \n",
+    "        curva = np.loadtxt(file2_path)      \n",
     "        NumberOfBlades= self.num_blades.get()\n",
+    "\n",
+    "        # Inputs for tower design\n",
     "        towerHeight= self.towerHeight.get()\n",
     "        towerRadius= self.towerRadius.get()\n",
     "        \n",
+    "        # Inputs for foundation desing\n",
     "        foundationHeight= self.foundationHeight.get()\n",
     "        foundationRadius= self.foundationRadius.get()\n",
     "        \n",
@@ -149,21 +150,25 @@
     "        z = curva[:,0]\n",
     "        corda = curva[:,1]\n",
     "        alpha = curva[:,2] * -1\n",
-    "        # hub height\n",
+    "\n",
+    "        # Define hub Radius to reach the first data from shapeFile\n",
     "        h_cylinder=corda[0]*np.sin(alpha[0])*(-1)\n",
     "\n",
-    "        # Define circle parameters\n",
+    "        ###########################################\n",
+    "        #              Tower Design\n",
+    "        ########################################### \n",
+    "        \n",
     "        r = towerRadius\n",
-    "        npoints = 100\n",
-    "\n",
+    "        npoints = 100 # define the number of points at the tower section profile\n",
     "        theta = np.linspace(0, 2*np.pi, npoints)\n",
     "\n",
-    "        # Define circle points\n",
+    "        # Define circle points at beginning\n",
     "        circle1 = np.zeros((npoints, 3))\n",
     "        circle1[:, 0] = r*np.cos(theta)\n",
     "        circle1[:, 1] = r*np.sin(theta)+h_cylinder\n",
     "        circle1[:, 2] = 0\n",
     "\n",
+    "        # Define circle points in the end\n",
     "        circle2 = np.zeros((npoints, 3))\n",
     "        circle2[:, 0] = r*np.cos(theta)\n",
     "        circle2[:, 1] = r*np.sin(theta)+h_cylinder\n",
@@ -193,13 +198,15 @@
     "        outputFilenamesave = outputFilename + '_tower.stl'\n",
     "        solid.save(outputFilenamesave)\n",
     "        \n",
-    "               # Define circle parameters\n",
+    "\n",
+    "        ###########################################\n",
+    "        #              Foundation Design\n",
+    "        ########################################### \n",
     "        r = foundationRadius\n",
     "        npoints = 100\n",
-    "\n",
     "        theta = np.linspace(0, 2*np.pi, npoints)\n",
     "\n",
-    "        # Define circle points\n",
+    "        # Define circle points at beginning\n",
     "        circle1 = np.zeros((npoints, 3))\n",
     "        circle1[:, 0] = r*np.cos(theta)\n",
     "        circle1[:, 1] = r*np.sin(theta)+h_cylinder\n",
