--- a/TurbineComplete.ipynb
+++ b/TurbineComplete.ipynb
@@ -166,7 +166,7 @@
     "        circle1 = np.zeros((npoints, 3))\n",
     "        circle1[:, 0] = r*np.cos(theta)\n",
     "        circle1[:, 1] = r*np.sin(theta)+h_cylinder\n",
-    "        circle1[:, 2] = 0\n",
+    "        circle1[:, 2] = 0-z[0]\n",
     "\n",
     "        # Define circle points in the end\n",
     "        circle2 = np.zeros((npoints, 3))\n",
@@ -238,7 +238,7 @@
     "        solid.save(\"foundation.stl\")   \n",
     "        \n",
     "        \n",
-    "        ##\n",
+    "        ## Creates the top surface from foundation\n",
     "        vertices = []\n",
     "        faces = []\n",
     "\n",
@@ -264,7 +264,7 @@
     "        circle_mesh.save('circle_tf.stl')\n",
     "        ##\n",
     "        \n",
-    "                ##\n",
+    "        ## Creates the botton surface from foundation\n",
     "        vertices = []\n",
     "        faces = []\n",
     "\n",
@@ -309,7 +309,9 @@
     "        outputFilenamesave = outputFilename + '_foundation.stl'\n",
     "        combined_mesh.save(outputFilenamesave)\n",
     "        \n",
-    "        \n",
+    "        ###########################################\n",
+    "        #              Rotor Design\n",
+    "        ########################################### \n",
     "        n, _ = curva.shape\n",
     "\n",
     "        x=np.zeros((n, 200))\n",
@@ -338,8 +340,6 @@
     "            y[i,:]=y_new_upper\n",
     "            z_n[i,:]=z_new_upper\n",
     "\n",
-    "\n",
-    "        #my_list.insert(0, 1)\n",
     "\n",
     "        for j in range(n-1):\n",
     "\n",
@@ -388,17 +388,13 @@
     "        # Save the mesh to an STL file\n",
     "        circle_mesh.save('last_profile.stl')\n",
     "\n",
-    "        #mesh_object.save('spline.stl')\n",
+    "        \n",
     "\n",
     "        filenames=[]\n",
     "\n",
     "        for j in range(n-1):\n",
     "            filename = f\"airfoil_perfil_{j}.stl\"\n",
     "            filenames.append(filename)\n",
-    "\n",
-    "        #filename = 'spline.stl' #last one\n",
-    "        #filenames.append(filename)\n",
-    "\n",
     "\n",
     "        combined_mesh = stl.mesh.Mesh(np.zeros(0, dtype=stl.mesh.Mesh.dtype))\n",
     "\n",
@@ -457,8 +453,7 @@
     "\n",
     "        solid.save(\"hub.stl\")\n",
     "\n",
-    "        #tampa do cilindro back\n",
-    "        #from stl import mesh\n",
+    "\n",
     "\n",
     "\n",
     "        # Define the parameters of the circle\n",
@@ -619,12 +614,7 @@
     "        ax1.set_aspect('equal')\n",
     "        ax1.set_title(\"Airfoil plot\")\n",
     "\n",
-    "        #canvas = tkagg.FigureCanvasTkAgg(fig1, master=root)\n",
-    "        #canvas.draw()\n",
-    "        #canvas.get_tk_widget().grid(row=5, column=3, columnspan=2)\n",
-    "\n",
-    "\n",
-    "        \n",
+    "       \n",
     "        # Create a Treeview widget to display the table\n",
     "        self.table = ttk.Treeview(self.master, columns=(\"R\", \"Chord\", \"Twist\")\n",
     "                                  , show=\"headings\")\n",
